@@ -1,6 +1,7 @@
 2022-09-07 Francois Suter (Idéative)  <typo3@ideative.ch>
 
 	* Improve exception handling in case of missing configuration, resolves #242
+	* Clean up usage of ObjectManager, resolves #252
 
 2022-08-31 Francois Suter (Idéative)  <typo3@ideative.ch>
 
